# and end with END <type>. Optionally, language overlay may be added.          #
# In multiline report, text is written between starting and ending line, and   #
# in the body of this report comments can't be used.                           #
################################################################################

VERSION 1.6.5 | 2018-03-02

CHANGE Odstránené zbytočne zobrazované ID záznamov o obsahu v triedení obsahu.
CHANGE [lang:english] Deleted unnecessary ID displaying in course content sorting on content records.

END VERSION

VERSION 1.6.4 | 2018-02-25

REMOVE Odstránená úprava otvárania navigácie administrácie z verzie 1.6.3 a vrátená do stavu verzie 1.6.2.
REMOVE [lang:english] Removed change of administration navigation open method from version 1.6.3 and reverted back to state from version 1.6.2.

END VERSION

VERSION 1.6.3 | 2018-02-24

CHANGE Navigácia v administrácii sa zobrazuje s oneskorením 250ms.
CHANGE [lang:english] Administration navigation is opening with 250ms delay.

CHANGE Navigácia v administrácii už nie je rozdelená na záložky.
CHANGE [lang:english] Administration navigation is no longer divided into tabs.

FIX Opravený problém, ktorý spôsoboval zlé zobrazovanie výsledkov testov.
FIX [lang:english] Fixed problem causing wrong display of tests results.

END VERSION

VERSION 1.6.2 | 2018-02-20

FIX Pridané chýbajúce štýly textu do stránok s popisom kurzu.
FIX [lang:english] Added missing text styles to all course description pages.

END VERSION

VERSION 1.6.1 | 2018-02-19

FIX Niekoľko drobných opráv pre verejnú stránku kurzu.
FIX [lang:english] Several small fixes for course public page.

END VERSION

VERSION 1.6.0 | 2018-02-18

NEW Pridané rozhranie pre správu obsahu kurzov (informácie, súbory na stiahnutie a pod.).
NEW [lang:english] Added interface for course content management (information, files for download, etc.).

NEW Pridané položky o sylabe, známkovaní, inštrukciách a volitelnej ďalšej informácii ku kurzu.