@@ -22,6 +22,9 @@
 
 VERSION 1.6.5 | 2018-03-02
 
+NEW Pridané odkazy na rýchle prepínanie medzi zoznamom obsahu, zoznamom skupín obsahu a zotriedením obsahu/skupín.
+NEW [lang:english] Added link for quick switching among course content list, course content groups list and course content/groups sorting.
+
 CHANGE Odstránené zbytočne zobrazované ID záznamov o obsahu v triedení obsahu.
 CHANGE [lang:english] Deleted unnecessary ID displaying in course content sorting on content records.
 
